--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -57,7 +57,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('puntos_index') }}">Administrar puntos de
                 encuentro</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('evacuation_route_index') }}">Administrar
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('evacuationRoute_index') }}">Administrar
                 recorridos de
                 evacuación</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Administrar eventos</a></li>
