--- a/app/templates/zonas/index.html
+++ b/app/templates/zonas/index.html
@@ -4,22 +4,23 @@
 {{ super() }}
 {% endblock %}
 {% block content %}
-
 <div class="container text-center">
   <div class="container mb-2">
     <h1>Zonas inundables</h1>
+
+    {% if has_permission(session, 'zone_upload_file') %}
     <form enctype="multipart/form-data" action="{{ url_for('zonas_upload') }}" class="needs-validation" method="POST">
       <div>
-        <label class="form-label" for="zone_file">Choose file to upload</label>
+        <label class="form-label" for="zone_file">Seleccione un archivo con zonas</label>
         <input name="zone_file" type="file" ID="zone_file" accept=".xlsx, .xls, .csv" />
       </div>
       <div>
         <button class="btn btn-outline-dark btn-sm">Submit</button>
       </div>
     </form>
-
-    <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
-    <a href="#" class="btn btn-primary mb-2">Nuevo</a>
+    {% endif %}
   </div>
+  <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
+  <a href="#" class="btn btn-primary mb-2">Nuevo</a>
 </div>
 {% endblock %}
