--- a/app/templates/zonas/index.html
+++ b/app/templates/zonas/index.html
@@ -12,13 +12,56 @@
     <form enctype="multipart/form-data" action="{{ url_for('zonas_upload') }}" class="needs-validation" method="POST">
       <div>
         <label class="form-label" for="zone_file">Seleccione un archivo con zonas</label>
-        <input name="zone_file" type="file" ID="zone_file" accept=".xlsx, .xls, .csv" />
+        <input name="zone_file" type="file" ID="zone_file" accept=".xlsx, .xls, .csv" required/>
       </div>
       <div>
         <button class="btn btn-outline-dark btn-sm">Submit</button>
       </div>
     </form>
     {% endif %}
+  </div>
+  <div class="table-responsive">
+
+    <table class="table table-striped table-border table-sm table-hover">
+      <tr class="table-light">
+        <th>Nombre</th>
+        <th>color</th>
+        <th>Estado</th>
+        <th>Acciones</th>
+      </tr>
+      {% for zone in zones.items %}
+      <tr class="table-info">
+        <td class="table-info">{{ zone.name }}</a></td>
+        <td class="table-info">{{ zone.color }}</td>
+        <td class="table-info">
+          {% if zone.state %}
+          Publicado
+          {% else %}
+          Oculto
+          {% endif %}
+        </td>
+        <td class="table-info">
+          <a href="{{ url_for('zones_edit', id=zone.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
+          <a href=" {{ url_for('zones_delete', id=zone.id) }}"
+            onclick="return confirm('Desea eliminar la zona: {{ zone.name }}? Esta acción no podrá deshacerse');"
+            title="Delete Merchant"><img src="static/images/delete.png" class="fotito"></a>
+        </td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+  <div>
+    <nav>
+      <ul class="pagination justify-content-center">
+        {% for page_num in zones.iter_pages() %}
+        {% if page_num %}
+        <li class="pag-item">
+          <a class="page-link" href="{{ url_for('zonas_index',page=page_num) }}">{{ page_num }}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+      </ul>
+    </nav>
   </div>
   <a href="{{ url_for('home') }}" class="btn btn-primary mb-2">Volver</a>
   <a href="#" class="btn btn-primary mb-2">Nuevo</a>
