--- a/app/templates/evacuationRoute/index.html
+++ b/app/templates/evacuationRoute/index.html
@@ -24,7 +24,7 @@
       <tr class="table-light">
         <th>Nombre</th>
         <th>Descripcion</th>
-        <th>Coordinadas</th>
+        <th>Coordenadas</th>
         <th>Estado</th>
         <th>Acciones</th>
       </tr>
@@ -41,14 +41,13 @@
           {% endif %}
         </td>
         <td class="table-info">
-          <a href="{{ url_for('evacuationRoute_edit', id=route.id) }}"><img src="static/images/pencil.png"
-              class="fotito"></a>
           <a href=" {{ url_for('evacuationRoute_delete', id=route.id) }}"
             onclick="return confirm('Desea eliminar el recorrido: {{ route.name }}? Esta acción no podrá deshacerse');"><img
               src="static/images/delete.png" class="fotito"></a>
         </td>
       </tr>
       {% endfor %}
+
     </table>
   </div>
   <div>
