Edicion de recorridos de evacuación en proceso

--- a/app/templates/evacuationRoute/index.html
+++ b/app/templates/evacuationRoute/index.html
@@ -41,9 +41,10 @@
           {% endif %}
         </td>
         <td class="table-info">
-          <a href=" {{ url_for('evacuationRoute_delete', id=route.id) }}"
-            onclick="return confirm('Desea eliminar el recorrido: {{ route.name }}? Esta acción no podrá deshacerse');"><img
-              src="static/images/delete.png" class="fotito"></a>
+          <a href="{{ url_for('evacuationRoute_edit', id=route.id) }}"><img src="static/images/pencil.png"
+              class="fotito"><a href=" {{ url_for('evacuationRoute_delete', id=route.id) }}"
+              onclick="return confirm('Desea eliminar el recorrido: {{ route.name }}? Esta acción no podrá deshacerse');"><img
+                src="static/images/delete.png" class="fotito"></a>
         </td>
       </tr>
       {% endfor %}
