--- a/app/templates/puntos/edit.html
+++ b/app/templates/puntos/edit.html
@@ -62,7 +62,7 @@
             </div>
 
             <p>
-                <label>Cambiar estado de usuario</label></br>
+                <label>Cambiar estado de punto</label></br>
                 {% if fieldsInfo.state %}
                 <select class="form-select-sm" name='state'>
                     <option value='1'>Publicado</option>
