Edit de recorridos de evacuación funcionando

--- a/app/templates/evacuationRoute/edit.html
+++ b/app/templates/evacuationRoute/edit.html
@@ -22,6 +22,9 @@
 <script type="module" src="{{ url_for('static', filename='js/evacuationRoute/edit.js') }}"></script>
 {% endblock %}
 {% block content %}
+<script>
+    var kk = {{ routeCoordinates| safe }};
+</script>
 <div class="container mb-2 text-center rounded-3" style="background-color: rgba(0, 0, 0, 0.1)">
     <h1>Crear un recorrido de evacuación</h1>
     <form id="create-evacuationRoute-form" class="needs-validation" method="post">
@@ -47,6 +50,7 @@
                     required />
                 {% endif %}
             </p>
+
             <input name="coordinates" type="text" id="coordinates" data-coordinates="{{routeCoordinates}}" />
             <input name="newCoordinates" type="text" id="newCoordinates" />
             <div id="map">
