Se corrigieron algunos nombres de variables, se agregaron comentarios y se agregó un botón de limpiar filtros en los distintos listados

--- a/app/templates/puntos/index.html
+++ b/app/templates/puntos/index.html
@@ -16,6 +16,8 @@
         <option value='0'>Oculto</option>
       </select>
       <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
+      <a href="{{ url_for ('puntos_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
+
     </form>
   </div>
   <div class="table-responsive">
@@ -24,19 +26,17 @@
       <tr class="table-light">
         <th>Nombre</th>
         <th>Direccion</th>
-        <th>Latitud</th>
-        <th>Longitud</th>
-        <th>Estado</th>
-        <th>Tefelono</th>
+        <th>Telefono</th>
         <th>Email</th>
+        <th>Estado</th>
         <th>Acciones</th>
       </tr>
       {% for punto in puntos.items %}
       <tr class="table-info">
         <td class="table-info">{{ punto.name }}</a></td>
         <td class="table-info">{{ punto.address }}</td>
-        <td class="table-info">{{ punto.latitude }}</td>
-        <td class="table-info">{{ punto.longitude }}</td>
+        <td class="table-info">{{ punto.telephone }}</td>
+        <td class="table-info">{{ punto.email }}</td>
         <td class="table-info">
           {% if punto.state %}
           Publicado
@@ -44,8 +44,6 @@
           Oculto
           {% endif %}
         </td>
-        <td class="table-info">{{ punto.telephone }}</td>
-        <td class="table-info">{{ punto.email }}</td>
         <td class="table-info">
           <a href="{{ url_for('puntos_edit', id=punto.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
           <a href=" {{ url_for('puntos_delete', id=punto.id) }}"
