--- a/app/templates/user/index.html
+++ b/app/templates/user/index.html
@@ -16,6 +16,8 @@
         <option value='0'>Desactivado</option>
       </select>
       <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
+      <a href="{{ url_for ('user_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
+
     </form>
   </div>
   <div class="table-responsive">
