--- a/app/templates/evacuationRoute/index.html
+++ b/app/templates/evacuationRoute/index.html
@@ -16,6 +16,7 @@
         <option value='0'>Oculto</option>
       </select>
       <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
+      <a href="{{ url_for ('evacuationRoute_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
     </form>
   </div>
   <div class="table-responsive">
@@ -24,7 +25,6 @@
       <tr class="table-light">
         <th>Nombre</th>
         <th>Descripcion</th>
-        <th>Coordenadas</th>
         <th>Estado</th>
         <th>Acciones</th>
       </tr>
@@ -32,7 +32,6 @@
       <tr class="table-info">
         <td class="table-info">{{ route.name }}</td>
         <td class="table-info">{{ route.description }}</td>
-        <td class="table-info">{{ route.coordinates }}</td>
         <td class="table-info">
           {% if route.state %}
           Publicado
