--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -52,7 +52,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('zonas_index') }}">Administrar zonas
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('zones_index') }}">Administrar zonas
                 inundables</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('puntos_index') }}">Administrar puntos de
