--- a/app/templates/floodZone/edit copy.html
+++ b/app/templates/floodZone/edit copy.html
@@ -19,20 +19,20 @@
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
 
-<script type="module" src="{{ url_for('static', filename='js/floodZone/edit.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/evacuationRoute/edit.js') }}"></script>
 
 <!-- Este script declara la variable routeCoordinates con el valor de routeCoordinates pasado por 
 parámetro a la vista desde el controlador. Javascript puede acceder a esta variable y con ella se
 obtienen las coordenadas del recorrido traído desde la BD -->
 <script>
-    var zoneCoordinates = {{ zoneCoordinates| safe }};
+    var routeCoordinates = {{ routeCoordinates| safe }};
 </script>
 
 {% endblock %}
 {% block content %}
 
 <div class="container mb-2 text-center rounded-3" style="background-color: rgba(0, 0, 0, 0.1)">
-    <h1>Editar una zona de inundación</h1>
+    <h1>Editar un recorrido de evacuación</h1>
     <form id="create-evacuationRoute-form" class="needs-validation" method="post">
         <div class="row">
             <p>
@@ -48,11 +48,11 @@ obtienen las coordenadas del recorrido traído desde la BD -->
             {% endif %}
             </p>
             <p>
-                <label class="form-label">Código de zona</label></br>
+                <label class="form-label">Descripción</label></br>
                 {% if errors %}
-                <input id="zone_code" value="{{fieldsInfo.zone_code}}" name="zone_code" required />
+                <input id="description" value="{{fieldsInfo.description}}" name="description" required />
                 {% else %}
-                <input id="zone_code" value="{{fieldsInfo.zone_code}}" name="zone_code" placeholder="Código de zona"
+                <input id="description" value="{{fieldsInfo.description}}" name="description" placeholder="Descripción"
                     required />
                 {% endif %}
             </p>
@@ -63,15 +63,6 @@ obtienen las coordenadas del recorrido traído desde la BD -->
             <div id="map">
                 <div id="mapid"></div>
             </div>
-
-            <p>
-                <label class="form-label">Color</label></br>
-                {% if errors %}
-                <input id="color" value="{{fieldsInfo.color}}" name="color" required />
-                {% else %}
-                <input id="color" value="{{fieldsInfo.color}}" name="color" placeholder="Color" required />
-                {% endif %}
-            </p>
 
             <p>
                 <label>Estado</label></br>
@@ -93,7 +84,7 @@ obtienen las coordenadas del recorrido traído desde la BD -->
             </p>
         </div>
     </form>
-    <a href="{{ url_for('zones_index') }}" class="btn btn-primary mb-2">Volver</a>
+    <a href="{{ url_for('evacuationRoute_index') }}" class="btn btn-primary mb-2">Volver</a>
 </div>
 {% endblock %}
 
