--- a/app/templates/floodZone/index.html
+++ b/app/templates/floodZone/index.html
@@ -8,7 +8,7 @@
   <div class="container mb-2">
     <h1>Zonas inundables</h1>
     <p>Filtrar por nombre y/o publicado/oculto:</p>
-    <form action="{{ url_for('evacuationRoute_search') }}" method="post">
+    <form action="{{ url_for('zones_search') }}" method="post">
       <input type="search" placeholder="Nombre" name="name">
       <select class="form-select-sm" name='state'>
         <option value="">Estado</option>
@@ -16,7 +16,7 @@
         <option value='0'>Oculto</option>
       </select>
       <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
-      <a href="{{ url_for ('evacuationRoute_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
+      <a href="{{ url_for ('zones_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
     </form>
   </div>
   <div class="table-responsive">
@@ -42,9 +42,10 @@
           {% endif %}
         </td>
         <td class="table-info">
-          <a href=" {{ url_for('zones_delete', id=zone.id) }}"
-            onclick="return confirm('Desea eliminar la zona: {{ zone.name }}? Esta acción no podrá deshacerse');"><img
-              src="static/images/delete.png" class="fotito"></a>
+          <a href="{{ url_for('zones_edit', id=zone.id) }}"><img src="static/images/pencil.png" class="fotito"><a
+              href=" {{ url_for('zones_delete', id=zone.id) }}"
+              onclick="return confirm('Desea eliminar la zona: {{ zone.name }}? Esta acción no podrá deshacerse');"><img
+                src="static/images/delete.png" class="fotito"></a>
         </td>
       </tr>
       {% endfor %}
