--- a/app/templates/floodZone/index.html
+++ b/app/templates/floodZone/index.html
@@ -8,7 +8,7 @@
   <div class="container mb-2">
     <h1>Zonas inundables</h1>
     <p>Filtrar por nombre y/o publicado/oculto:</p>
-    <form action="{{ url_for('zones_search') }}" method="post">
+    <form action="{{ url_for('zones_index') }}">
       <input type="search" placeholder="Nombre" name="name">
       <select class="form-select-sm" name='state'>
         <option value="">Estado</option>
@@ -71,7 +71,7 @@
         <input name="zone_file" type="file" ID="zone_file" accept=".xlsx, .xls, .csv" />
       </div>
       <div>
-        <button class="btn btn-outline-dark btn-sm">Submit</button>
+        <button class="btn btn-outline-dark btn-sm" type="submit">Submit</button>
       </div>
     </form>
     {% endif %}
