--- a/app/templates/puntos/index.html
+++ b/app/templates/puntos/index.html
@@ -8,12 +8,12 @@
   <div class="container mb-2">
     <h1>Puntos de encuentro</h1>
     <p>Filtrar por nombre y/o publicado/oculto:</p>
-    <form action="{{ url_for('puntos_search') }}" method="post">
-      <input type="search" placeholder="Nombre" name="name">
+    <form action="{{ url_for('puntos_index') }}" >
+      <input type="search" placeholder="Nombre" name="name" value="{{fieldsInfo['name']}}">
       <select class="form-select-sm" name='state'>
         <option value="">Estado</option>
-        <option value='1'>Publicado</option>
-        <option value='0'>Oculto</option>
+        <option value='1' {% if fieldsInfo['state']=="1" %} selected="selected" {% endif %}>Publicado</option>
+        <option value='0' {% if fieldsInfo['state']=="0" %} selected="selected" {% endif %}>Oculto</option>
       </select>
       <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
       <a href="{{ url_for ('puntos_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
