--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -60,7 +60,7 @@
             <li class="nav-item"><a class="nav-link" href="{{ url_for('evacuationRoute_index') }}">Administrar
                 recorridos de
                 evacuación</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Administrar eventos</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('reports_index') }}">Administrar denuncias</a></li>
             {% if has_permission(session, 'user_index') %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('user_index') }}">Usuarios</a></li>
             {% endif %}
