Listado y alta de denuncias funcionando, con respectivos validadores

--- a/app/templates/report/index.html
+++ b/app/templates/report/index.html
@@ -33,18 +33,17 @@
         <td class="table-info">{{ report.title }}</td>
         <td class="table-info">{{ report.category }}</td>
         <td class="table-info">
-          {% if report.state %}
-          Publicado
+          {% if report.state == "unconfirmed" %}
+          Sin confirmar
+          {% elif report.state == "in_progress" %}
+          En progreso
+          {% elif report.state == "solved" %}
+          Resuelta
           {% else %}
-          Oculto
+          Cerrada
           {% endif %}
         </td>
-        <td class="table-info">
-          <a href="{{ url_for('evacuationRoute_edit', id=route.id) }}"><img src="static/images/pencil.png"
-              class="fotito"><a href=" {{ url_for('evacuationRoute_delete', id=route.id) }}"
-              onclick="return confirm('Desea eliminar el recorrido: {{ route.name }}? Esta acción no podrá deshacerse');"><img
-                src="static/images/delete.png" class="fotito"></a>
-        </td>
+
       </tr>
       {% endfor %}
 
