edicion y elminacion de denuncias disponible

--- a/app/templates/report/index.html
+++ b/app/templates/report/index.html
@@ -43,6 +43,12 @@
           Cerrada
           {% endif %}
         </td>
+        <td class="table-info">
+          <a href="{{ url_for('reports_edit', id=report.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
+          <a href=" {{ url_for('reports_delete', id=report.id) }}"
+            onclick="return confirm('Desea eliminar la denuncia : {{ report.title }}? Esta acción no podrá deshacerse');"
+            title="Delete Merchant"><img src="static/images/delete.png" class="fotito"></a>
+        </td>
 
       </tr>
       {% endfor %}
