Ahora el listado de las denuncias muestra el username del usuario asignado y también lo almacena en la base de datos

--- a/app/templates/report/index.html
+++ b/app/templates/report/index.html
@@ -9,7 +9,9 @@
     <h1>Denuncias</h1>
     <p>Filtrar por nombre y/o publicado/oculto:</p>
     <form action="{{ url_for('reports_index') }}">
-      <input type="search" placeholder="Nombre" name="name" value="{{fieldsInfo['name']}}">
+      <input type="search" placeholder="Título" name="title" value="{{fieldsInfo['title']}}">
+      <input type="date" name="start" value="{{fieldsInfo['start']}}">
+      <input type="date" name="finish" value="{{fieldsInfo['finish']}}">
       <select class="form-select-sm" name='state'>
         <option value="">Estado</option>
         <option value='1' {% if fieldsInfo['state']=="1" %} selected="selected" {% endif %}>Publicado</option>
@@ -26,6 +28,7 @@
         <th>Título</th>
         <th>Categoría</th>
         <th>Estado</th>
+        <th>Usuario asignado</th>
         <th>Acciones</th>
       </tr>
       {% for report in reports.items %}
@@ -43,6 +46,7 @@
           Cerrada
           {% endif %}
         </td>
+        <td class="table-info">{{ report.assigned_to.username }}</td>
         <td class="table-info">
           <a href="{{ url_for('reports_edit', id=report.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
           <a href=" {{ url_for('reports_delete', id=report.id) }}"
