--- a/app/templates/report/new.html
+++ b/app/templates/report/new.html
@@ -65,6 +65,13 @@
         </select>
       </p>
       <p>
+        <select name="user_id" id="">
+          {% for user in users %}
+            <option value="{{ user.id }}">{{ user.username }}</option>
+          {% endfor %}
+        </select>
+      </p>
+      <p>
         <label class="form-label">Telefono del denunciante</label></br>
         {% if errors %}
         <input id="complainant_telephone" value="{{fieldsInfo.complainant_telephone}}" name="complainant_telephone" required />
