--- a/app/templates/floodZone/index.html
+++ b/app/templates/floodZone/index.html
@@ -40,10 +40,9 @@
           {% endif %}
         </td>
         <td class="table-info">
-          <a href="{{ url_for('zones_edit', id=zone.id) }}"><img src="static/images/pencil.png" class="fotito"><a
-              href=" {{ url_for('zones_delete', id=zone.id) }}"
-              onclick="return confirm('Desea eliminar la zona: {{ zone.name }}? Esta acción no podrá deshacerse');"><img
-                src="static/images/delete.png" class="fotito"></a>
+          <a href="{{ url_for('zones_show_info', id=zone.id) }}"><img src="static/images/mostrar.png" class="fotito"></a>
+          <a href="{{ url_for('zones_edit', id=zone.id) }}"><img src="static/images/pencil.png" class="fotito"></a>
+          <a href=" {{ url_for('zones_delete', id=zone.id) }}" onclick="return confirm('Desea eliminar la zona: {{ zone.name }}? Esta acción no podrá deshacerse');"><img src="static/images/delete.png" class="fotito"></a>
         </td>
       </tr>
       {% endfor %}
