--- a/app/templates/report/new.html
+++ b/app/templates/report/new.html
@@ -29,10 +29,10 @@
       <p>
         <label class="form-label">Título</label></br>
         {% if errors %}
-        <input id="title" value="{{fieldsInfo.title}}" name="title" placeholder="Título" required/>
-      {% else %}
-      <input id="title" name="title" placeholder="Título" required />
-      {% endif %}
+        <input id="title" value="{{fieldsInfo.title}}" name="title" placeholder="Título" required />
+        {% else %}
+        <input id="title" name="title" placeholder="Título" required />
+        {% endif %}
       </p>
       <p>
         <label>Categoría</label></br>
@@ -46,7 +46,8 @@
       <p>
         <label class="form-label">Descripción</label></br>
         {% if errors %}
-        <textarea name="description" id="description" value="{{fieldsInfo.description}}" placeholder="Descripción" cols="50" rows="5"></textarea>
+        <textarea name="description" id="description" value="{{fieldsInfo.description}}" placeholder="Descripción"
+          cols="50" rows="5"></textarea>
         {% else %}
         <textarea name="description" id="description" placeholder="Descripción" cols="50" rows="5"></textarea>
         {% endif %}
@@ -67,16 +68,18 @@
       <p>
         <select name="user_id" id="">
           {% for user in users %}
-            <option value="{{ user.id }}">{{ user.username }}</option>
+          <option value="{{ user.id }}">{{ user.username }}</option>
           {% endfor %}
         </select>
       </p>
       <p>
         <label class="form-label">Telefono del denunciante</label></br>
         {% if errors %}
-        <input id="complainant_telephone" value="{{fieldsInfo.complainant_telephone}}" name="complainant_telephone" required />
+        <input id="complainant_telephone" value="{{fieldsInfo.complainant_telephone}}" name="complainant_telephone"
+          required />
         {% else %}
-        <input id="complainant_telephone" name="complainant_telephone" placeholder="Telefono del denunciante" required />
+        <input id="complainant_telephone" name="complainant_telephone" placeholder="Telefono del denunciante"
+          required />
         {% endif %}
       </p>
       <p>
@@ -98,12 +101,14 @@
       <p>
         <label class="form-label">Apellidos del denunciante</label></br>
         {% if errors %}
-        <input id="complainant_last_name" value="{{fieldsInfo.complainant_last_name}}" name="complainant_last_name" required />
+        <input id="complainant_last_name" value="{{fieldsInfo.complainant_last_name}}" name="complainant_last_name"
+          required />
         {% else %}
-        <input id="complainant_last_name" name="complainant_last_name" placeholder="Apellidos del denunciante" required />
+        <input id="complainant_last_name" name="complainant_last_name" placeholder="Apellidos del denunciante"
+          required />
         {% endif %}
       </p>
-      
+
       <p>
         <input class="btn btn-outline-dark btn-sm" type="submit" value="Crear" />
       </p>
