--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -27,6 +27,7 @@
           <input type="submit" value="Login">
         </form>
       </li>
+      <a href="{{ url_for('auth_login_google') }}">Login con google</a>
       {% else %}
       <li class="li-boton">
         <div class="dropdown">
@@ -60,7 +61,8 @@
             <li class="nav-item"><a class="nav-link" href="{{ url_for('evacuationRoute_index') }}">Administrar
                 recorridos de
                 evacuación</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('reports_index') }}">Administrar denuncias</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('reports_index') }}">Administrar denuncias</a>
+            </li>
             {% if has_permission(session, 'user_index') %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('user_index') }}">Usuarios</a></li>
             {% endif %}
