Ya se pueden publicar denuncias desde la aplicación publica

--- a/app/templates/report/index.html
+++ b/app/templates/report/index.html
@@ -7,15 +7,17 @@
 <div class="container text-center">
   <div class="container mb-2">
     <h1>Denuncias</h1>
-    <p>Filtrar por nombre y/o publicado/oculto:</p>
+    <p>Filtrar por título, fecha y/o estado:</p>
     <form action="{{ url_for('reports_index') }}">
       <input type="search" placeholder="Título" name="title" value="{{fieldsInfo['title']}}">
       <input type="date" name="start" value="{{fieldsInfo['start']}}">
       <input type="date" name="finish" value="{{fieldsInfo['finish']}}">
       <select class="form-select-sm" name='state'>
         <option value="">Estado</option>
-        <option value='1' {% if fieldsInfo['state']=="1" %} selected="selected" {% endif %}>Publicado</option>
-        <option value='0' {% if fieldsInfo['state']=="0" %} selected="selected" {% endif %}>Oculto</option>
+        <option value='unconfirmed' {% if fieldsInfo['state']=="unconfirmed" %} selected="selected" {% endif %}>Sin confirmar</option>
+        <option value='in_progress' {% if fieldsInfo['state']=="in_progress" %} selected="selected" {% endif %}>En curso</option>
+        <option value='solved' {% if fieldsInfo['state']=="solved" %} selected="selected" {% endif %}>Resuelta</option>
+        <option value='closed' {% if fieldsInfo['state']=="closed" %} selected="selected" {% endif %}>Cerrada</option>
       </select>
       <button class="btn btn-outline-primary btn-sm" type="submit">Filtrar</button>
       <a href="{{ url_for ('reports_index') }}" class="btn btn-outline-primary btn-sm">Limpiar filtros</a>
