Ahora se puede actualizar el estado de una denuncia desde la creación de los seguimientos, también se borraron algunos breakpoints comentados

--- a/app/templates/tracing/new.html
+++ b/app/templates/tracing/new.html
@@ -23,6 +23,15 @@
           {% endfor %}
         </select>
       </p>
+      <p>
+        <label>Estado</label></br>
+        <select id="state" class="form-select-sm" name='state'>
+          <option value='unconfirmed' {% if report.state=="unconfirmed" %} selected="selected" {% endif %}>Sin confirmar</option>
+          <option value='in_progress' {% if report.state=="in_progress" %} selected="selected" {% endif %}>En curso</option>
+          <option value='solved' {% if report.state=="solved" %} selected="selected" {% endif %}>Resuelta</option>
+          <option value='closed' {% if report.state=="closed" %} selected="selected" {% endif %}>Cerrada</option>
+        </select>
+      </p>
     
       <p>
         <input class="btn btn-outline-dark btn-sm" type="submit" value="Crear" />
