--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,13 +21,15 @@
       </li>
       {% if not is_authenticated(session) %}
       <li class="li-boton">
-        <form action="{{ url_for('auth_authenticate') }}" method="POST">
+        <form class="login_form" action="{{ url_for('auth_authenticate') }}" method="POST">
           <input name="email" placeholder="Correo" required />
           <input type="password" name="password" placeholder="Clave" required />
-          <input type="submit" value="Login">
+          <input class="btn btn-primary btn-sm mt-1 mb-1" type="submit" value="Login">
         </form>
+        <a class="google_login_button" href="{{ url_for('auth_login_google') }}">
+          <img class="google_login_img" src="{{ url_for('static', filename='images/google_login.svg') }}" />
+        </a>
       </li>
-      <a href="{{ url_for('auth_login_google') }}">Login con google</a>
       {% else %}
       <li class="li-boton">
         <div class="dropdown">
